--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.16.0",
     "axios": "^1.6.8",
+    "html-docx-js": "^0.3.1",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
