--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@mui/x-charts": "^7.2.0",
+    "@mui/x-tree-view": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.16.0",
     "axios": "^1.6.8",
+    "chart.js": "^3.9.1",
     "html-docx-js": "^0.3.1",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^3.3.0",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
